pending remaining task

--- a/memby/memby/doctype/member/templates/member_row.html
+++ b/memby/memby/doctype/member/templates/member_row.html
@@ -1,4 +1,5 @@
 <div>
 	<a href="/{{ doc.route |e }}">{{ (doc.title or doc.name) |e }}</a>
+	<div>{{doc.remaining_total}}</div>
 </div>
 <!-- this is a sample default list template -->
